# my_api_application

./: README.md  app.py  pyproject.toml  settings.py
core/: __init__.py  database.py
core/models/: __init__.py  base.py
